<resources>
    <string name="app_name">Always Enough TP</string>
    <string name="title_activity_main">Always Enough TP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--MENU-->
    <string name="menu_join_create">Join/Create</string>
    <string name="menu_shopping_list">Shopping list</string>
    <string name="menu_members">Members</string>
    <string name="menu_history">History</string>
    <string name="menu_payments">Payments</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sign_out">Sign out</string>

    <!--SETTINGS-->
    <string name="settings_household_name">Household name</string>
    <string name="settings_household_code">Household code</string>
    <string name="settings_copy_button">Copy button</string>
    <string name="settings_name">Name</string>
    <string name="settings_phone">Phone</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_notification1">New item in shopping list</string>
    <string name="settings_notification2">Item bought</string>
    <string name="settings_leave_household">Leave household</string>
    <string name="settings_leave_household_as_admin">Leave household as admin</string>
    <string name="changes_saved">Changes saved</string>
    <string name="settings_leave_admin_household_dialogue">Are you sure you want to leave this household? This will make another random person in the household the administrator. </string>
    <string name="settings_leave_household_dialogue">Are you sure you want to leave this household?</string>
    <!--dummy values-->
    <string name="settings_dummy_phone">50132420</string>
    <string name="settings_dummy_name">Maggie</string>
    <string name="settings_household_dummy_code">91c8c244-6a05-408a-8654-aabbebcb1da9</string>
    <string name="settings_household_dummy_name">Cool name</string>

    <!--JOIN OR CREATE HOUSEHOLD-->
    <string name="join_a_household">Join a household</string>
    <string name="create_a_household">Create a household</string>
    <string name="question_mark">\?</string>
    <string name="join_button">Join</string>
    <string name="create_button">Create</string>
    <string name="household_code_example">Ex. 5uTe0932ffjnl29l</string>
    <string name="household_name_example">Ex. Lovely home</string>
    <string name="household_code_help_title">Household code help</string>
    <string name="household_code_help_text">Each household has a unique code. The household creator can find it in Settings. </string>
    <string name="button_ok">OK</string>


    <!--SHOPPING LIST-->
    <string name="shopping_list_tab_shopping">Shopping</string>
    <string name="shopping_list_tab_bought">Bought</string>
    <string name="shopping_list_tab_history">History</string>
    <string name="shopping_list_bought_enter_money">Enter money</string>
    <string name="shopping_list_delete_item_text">Are you sure you want to delete item: </string>
    <string name="shopping_list_delete_item_title">Delete item</string>
    <string name="shopping_list_yes_button">Yes</string>
    <string name="shopping_list_add_new_item_text">Enter the name of the item: </string>
    <string name="shopping_list_add_new_item_button_ok">OK</string>
    <string name="shopping_list_add_new_item_exists">This item already exists in the list. </string>
    <string name="shopping_list_bought_dailogue">Are you sure you bought those items?</string>


    <!--PAYMENTS-->
    <string name="payments_current">Current</string>
    <string name="payments_history">History</string>
    <string name="payments_current_overview">Overview</string>
    <string name="payments_current_pay">Pay</string>
    <string name="payments_current_requests">Requests</string>
    <string name="payments_history_sent">Sent</string>
    <string name="payments_history_received">Received</string>


    <!--HISTORY-->
    <string name="history_delete_all_text">Are you sure you want to delete the whole history?</string>
    <string name="history_delete_yes">Yes</string>
    <string name="history_delete_sure">Are you sure?</string>
    <string name="history_delete_yes_again">Yes, as I said.</string>
    <string name="history_delete_really_sure">Are you really sure though? ( ͡° ͜ʖ ͡°)</string>
    <string name="history_delete_yes_goddamn">YES GODDAMN!!</string>


    <!--MEMBERS-->
    <string name="members_copied_phone_number">Phone number was copied</string>

</resources>