<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_shopping_list"
            android:icon="@drawable/ic_menu_shopping_list"
            android:title="@string/menu_shopping_list" />
        <item
            android:id="@+id/nav_members"
            android:icon="@drawable/ic_menu_members"
            android:title="@string/menu_members" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_test"
            android:icon="@drawable/ic_menu_settings"
            android:title="Test"/>
    </group>
</menu>